RMagick 1.9.2
    o Feature 2412, add the virtual_pixel_method attribute and the VirtualPixelMethod
      enumeration

RMagick 1.9.1
    o Fixed bug #2157, Image#total_colors is now an alias of Image#number_colors
    o Fixed bug #2155, Image#dispose= now accepts a DisposeType enum, #dispose
      now returns a DisposeType enum.
    o Fixed bug #2156, Image#properties no longer returns garbage for the property
      name and value.
    o Fixed bug #2190, Image#compose now returns a CompositeOperator
    o Fixed bug #2191, Image#composite no longer abends when called with 0 arguments
    o Fixed bug #2213, ImageList#montage method no longer leaves the imagelist corrupt
      after raising an ImageMagickError
    o Feature #2159, added GrayChannel ChannelType enum value, BlendCompositeOp and
      ColorBurnCompositeOp CompositeOperator enum values, RLECompression CompressionType
      enum value, deprecate RunlengthCompression
    o Feature #2172, added optional argument to crop and crop! to reset the saved
      page offsets after cropping
    o Deprecated Image#channel_threshold. This method is deprecated in ImageMagick.
    o Feature #2373, change Image#import_pixels to accept a pixel data buffer as well
      as a pixel data array. (Thanks to Ara T. Howard for this suggestion!)
    o Fixed to compile without errors with ImageMagick 6.2.4-4.

RMagick 1.9.0
    o Added Image#monitor=, Image::Info#monitor=. Deprecated Magick.set_monitor.
    o Fixed bug #2070, support color names with embedded spaces
    o Fixed bug #2109, properly scope Magick constants in RVG

RMagick 1.8.3
    o Tested with ImageMagick 6.2.3-2
    o Added comment, delay, dispose, fill, gravity, and label attributes to
      Image::Info

RMagick 1.8.2
    o Fix bug #1983, potential buffer overflow in version_constants
    o Added feature #2015, support the pointsize, authenticate,
      and sampling_factor attributes in Image::Info

RMagick 1.8.1
    o Fix bugs #1876, #1888, #1919