@@ -106,6 +106,8 @@
 #undef HAVE_IMAGE_QUALITY
 /* Introduced in IM 6.0.0 */
 #undef HAVE_IMAGE_ORIENTATION
+/* Introduced in IM 6.2.4 */
+#undef HAVE_IMAGE_TICKS_PER_SECOND
 /* Introduced in IM 5.5.6 */
 #undef HAVE_IMAGEINFO_NUMBER_SCENES
 /* Introduced in IM 5.5.7, GM 1.1 */
